gccida/c3/expand_call
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_call/src/calls.c:2559:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v27; // r12 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_call/src/calls.c:2565:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v33; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_call/src/calls.c:2566:4: error: expected ';' after expression
rtx v34; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_call/src/calls.c:2566:5: error: use of undeclared identifier 'v34'
rtx v34; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_call/src/calls.c:2569:4: error: expected ';' after expression
rtx result; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_call/src/calls.c:2569:5: error: use of undeclared identifier 'result'
rtx result; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_call/src/calls.c:2576:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v44; // r14 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_call/src/calls.c:2577:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v45; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_call/src/calls.c:2578:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *tree; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_call/src/calls.c:2579:5: error: expected ';' after expression
tree v47; // rax 
    ^
    ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_call/src/calls.c:2579:6: error: use of undeclared identifier 'v47'
tree v47; // rax 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_call/src/calls.c:2580:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v48; // rcx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_call/src/calls.c:2581:5: error: expected ';' after expression
tree v49; // r12 
    ^
    ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_call/src/calls.c:2581:6: error: use of undeclared identifier 'v49'
tree v49; // r12 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_call/src/calls.c:2589:5: error: expected ';' after expression
tree chain; // rbx 
    ^
    ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_call/src/calls.c:2589:6: error: use of undeclared identifier 'chain'
tree chain; // rbx 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_call/src/calls.c:2592:5: error: expected ';' after expression
tree rttree; // r13 
    ^
    ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_call/src/calls.c:2592:6: error: use of undeclared identifier 'rttree'; did you mean 'tree'?
tree rttree; // r13 
     ^~~~~~
     tree
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_call/src/calls.c:2578:12: note: 'tree' declared here
tree_node *tree; // rax 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_call/src/calls.c:2601:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v69; // rsi 
^
union 
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_call/src/obj/calls.o] Error 1
